[project]
name = "fancy-job"
version = "0.1.0"
description = "Daily number incrementer with optional LLM-based commit messages"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
